# tengu

./: .gitignore  AGENTS.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TASK.md  build.rs
.tengu/: config.toml
docs/: ARCHITECTURE.md  GIT_RULE.md  MCP_PROTOCOL_NOTES.md  PHASE_CHECKS.md  REQUIREMENTS.md  REQUIREMENTS_MATRIX.md  RUST_CODING_GUIDELINES.md  SCREEN_LAYOUT_SPEC.md  TASK.md
docs/alt-claude-code/: TASK.md
src/: cli.rs  main.rs
src/agent/: agent.rs  mod.rs  store.rs
src/config/: config.rs  mod.rs
src/llm/: anthropic.rs  core.rs  google.rs  mod.rs  ollama.rs  openai.rs
src/mcp/: http.rs  mcp.rs  mod.rs  stdio.rs  store.rs  types.rs
src/review/: mod.rs
src/session/: mod.rs  session.rs
src/tools/: mod.rs  tools.rs
src/tui/: ansi.rs  controller.rs  inline.rs  mod.rs  render.rs  state.rs  theme.rs  theme.toml  tui.rs
