[package]
name = "tengu"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "A multi-LLM coding agent CLI with MCP integration"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
ratatui = "0.26"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
crossterm = "0.27"
unicode-width = "0.1"
